manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: booktracker
  labels:
    app: booktracker
spec:
  replicas: 3
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  selector:
    matchLabels:
      app: booktracker
  template:
    metadata:
      labels:
        app: booktracker
    spec:
      containers:
        - name: booktracker
          image: acrakslearnjayanth.azurecr.io/booktracker:v1
          ports:
            - containerPort: 8000
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 250m
              memory: 256Mi
          readinessProbe:
            httpGet:
              path: /ready
              port: 8000
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /health
              port: 8000
            initialDelaySeconds: 10
            periodSeconds: 20
