manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: booktracker
  labels:
    app: booktracker
spec:
  type: LoadBalancer
  selector:
    app: booktracker
  ports:
    - port: 80
      targetPort: 8000
      protocol: TCP
